feat(crypto-service): initial impl

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -3,3 +3,11 @@ spring:
     url: jdbc:postgresql:///${DATABASE_NAME}?cloudSqlInstance=${DATABASE_INSTANCE_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
+
+cloud:
+  google:
+    project-id: ${GCP_PROJECT_ID}
+    region: ${GCP_REGION}
+    crypto:
+      key-ring-id: ${GCP_CRYPTO_KEY_RING_ID}
+      key-id: ${GCP_CRYPTO_KEY_ID}
