--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 ext {
     set('springCloudVersion', "2021.0.4")
     set('testcontainersVersion', "1.17.4")
+    set('googleCloudVersion', "26.1.3")
 }
 
 dependencies {
@@ -34,6 +35,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'com.google.cloud.sql:postgres-socket-factory:1.7.1'
+    implementation 'com.google.cloud:google-cloud-kms'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
@@ -46,6 +48,7 @@ dependencyManagement {
     imports {
         mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "com.google.cloud:libraries-bom:${googleCloudVersion}"
     }
 }
 
