fix(github-run-controller): fixes + TODOs
Co-authored-by: Jowita Podolak <jowita.podolak@gmail.com>
Co-authored-by: Fallon Rishiva <fallon.rishiva@thoughtworks.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/main
     username: main
     password: mysecretpassword
+
+tmp:
+  app-configuration-token: ${CAPYBARA_GITHUB_TOKEN}
